--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
   font-family: "Mukta", sans-serif;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(/bgi.jpg);
+    url(./bgi.jpg);
   background-size: cover;
   background-position: center;
 }
